// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Quiz Poll renders correctly 1`] = `
<jest>
  <section
    class="ecl-quiz ecl-quiz--poll"
    data-ecl-auto-init="Quiz"
    id="quiz-poll"
  >
    <div
      class="ecl-quiz__header"
    >
      <div
        class="ecl-quiz__title"
      >
        Ut enim ad minim veniam 
      </div>
      <div
        class="ecl-quiz__description"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
    Excepteur sint occaecat cupidatat non proident, sunt.
      </div>
    </div>
    <div
      class="ecl-quiz__viewport"
      data-ecl-quiz-slider=""
    >
      <ol
        class="ecl-quiz__list"
      >
        <li
          class="ecl-quiz-card"
          id="quiz-poll-1"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--question ecl-icon ecl-icon--2xl ecl-icon-phosphor--question"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category"
                >
                  Quiz
                </span>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-poll-1-question"
              >
                Which institution proposes new EU laws?
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="true"
                  tabindex="0"
                >
                  European commission
                  <span
                    class="ecl-quiz__skip"
                  >
                    Use ESC to skip the quiz
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="false"
                  tabindex="0"
                >
                  European parliament
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="false"
                  tabindex="0"
                >
                  European Central Bank
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="false"
                  tabindex="0"
                >
                  Court of Justice of the European Union
                </li>
              </ol>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--2xl ecl-quiz-card__icon--success ecl-icon-phosphor--check-circle"
                  />
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--2xl ecl-icon-phosphor--x-circle"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--success"
                  tabindex="0"
                >
                  Correct
                </span>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--error"
                  tabindex="0"
                >
                  Incorrect
                </span>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-poll-1-answer"
              >
                <div
                  class="ecl-quiz-card__answer-title"
                >
                  The correct answer is A.
                </div>
                The European Commission has the exclusive right to propose new EU laws
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-match="true"
                >
                  European commission
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  European parliament
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  European Central Bank
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  Court of Justice of the European Union
                </li>
              </ol>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          id="quiz-poll-2"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--question ecl-icon ecl-icon--2xl ecl-icon-phosphor--question"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category"
                >
                  Quiz
                </span>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-poll-2-question"
              >
                What document allows EU citizens to travel freely between most EU countries?
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="false"
                  tabindex="0"
                >
                  A valid ID card.
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="true"
                  tabindex="0"
                >
                  A valid ID card or passport
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="false"
                  tabindex="0"
                >
                  A valid passport.
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="false"
                  tabindex="0"
                >
                  None of these
                </li>
              </ol>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--2xl ecl-quiz-card__icon--success ecl-icon-phosphor--check-circle"
                  />
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--2xl ecl-icon-phosphor--x-circle"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--success"
                  tabindex="0"
                >
                  Correct
                </span>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--error"
                  tabindex="0"
                >
                  Incorrect
                </span>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-poll-2-answer"
              >
                <div
                  class="ecl-quiz-card__answer-title"
                >
                  The correct answer is B.
                </div>
                A valid ID card or passport is usually enough to travel freely between most EU countries.
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  A valid ID card.
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="true"
                >
                  A valid ID card or passport
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  A valid passport.
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  None of these
                </li>
              </ol>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          id="quiz-poll-3"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--question ecl-icon ecl-icon--2xl ecl-icon-phosphor--question"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category"
                >
                  Quiz
                </span>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-poll-3-question"
              >
                What currency is used in many EU countries?
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="false"
                  tabindex="0"
                >
                  The pound is the most used currency in the EU
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="false"
                  tabindex="0"
                >
                  The Leu is by far the most used currency in the European Union 
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="true"
                  tabindex="0"
                >
                  The euro (€) is used in many EU member states.
                </li>
              </ol>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--2xl ecl-quiz-card__icon--success ecl-icon-phosphor--check-circle"
                  />
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--2xl ecl-icon-phosphor--x-circle"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--success"
                  tabindex="0"
                >
                  Correct
                </span>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--error"
                  tabindex="0"
                >
                  Incorrect
                </span>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-poll-3-answer"
              >
                <div
                  class="ecl-quiz-card__answer-title"
                >
                  The correct answer is C.
                </div>
                The Euro is the official currency used by many EU conutries
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  The pound is the most used currency in the EU
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  The Leu is by far the most used currency in the European Union 
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="true"
                >
                  The euro (€) is used in many EU member states.
                </li>
              </ol>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          id="quiz-poll-4"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--question ecl-icon ecl-icon--2xl ecl-icon-phosphor--question"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category"
                >
                  Quiz
                </span>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-poll-4-question"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit?
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="false"
                  tabindex="0"
                >
                  Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="true"
                  tabindex="0"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="false"
                  tabindex="0"
                >
                  ivamus auctor blandit auctor.
                </li>
              </ol>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--2xl ecl-quiz-card__icon--success ecl-icon-phosphor--check-circle"
                  />
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--2xl ecl-icon-phosphor--x-circle"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--success"
                  tabindex="0"
                >
                  Correct
                </span>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--error"
                  tabindex="0"
                >
                  Incorrect
                </span>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-poll-4-answer"
              >
                <div
                  class="ecl-quiz-card__answer-title"
                >
                  The correct answer is B.
                </div>
                Duis id mattis libero. Quisque accumsan nisi
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  ivamus auctor blandit auctor.
                </li>
              </ol>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          id="quiz-poll-5"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--question ecl-icon ecl-icon--2xl ecl-icon-phosphor--question"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category"
                >
                  Quiz
                </span>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-poll-5-question"
              >
                Nam lorem eros, auctor at feugiat id, efficitur non velit. Nam ac arcu vitae eros dapibus cursus vel eget lectus.
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="false"
                  tabindex="0"
                >
                  Aenean est metus, malesuada sed suscipit id, tempor non sapien.
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="false"
                  tabindex="0"
                >
                  In id nisi vel diam mollis varius. In vitae dui et dolor suscipit venenatis.
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-ecl-quiz-card-flip=""
                  data-match="true"
                  tabindex="0"
                >
                  Aenean facilisis venenatis lacus, et egestas quam mattis eu.
                </li>
              </ol>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--2xl ecl-quiz-card__icon--success ecl-icon-phosphor--check-circle"
                  />
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--2xl ecl-icon-phosphor--x-circle"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--success"
                  tabindex="0"
                >
                  Correct
                </span>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--error"
                  tabindex="0"
                >
                  Incorrect
                </span>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-poll-5-answer"
              >
                <div
                  class="ecl-quiz-card__answer-title"
                >
                  The correct answer is C.
                </div>
                Duis id mattis libero. Quisque accumsan nisi
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  Aenean est metus, malesuada sed suscipit id, tempor non sapien.
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  In id nisi vel diam mollis varius. In vitae dui et dolor suscipit venenatis.
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="true"
                >
                  Aenean facilisis venenatis lacus, et egestas quam mattis eu.
                </li>
              </ol>
            </div>
          </article>
        </li>
      </ol>
    </div>
    <div
      class="ecl-quiz__pager"
    >
      <button
        class="ecl-quiz__prev"
      >
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-270 ecl-icon--corner-arrow"
        />
        <span
          class="ecl-quiz__prev-label"
        >
          
        Previous
      
        </span>
      </button>
      <div
        class="ecl-quiz__dots"
      />
      <button
        class="ecl-quiz__next"
      >
        <span
          class="ecl-quiz__next-label"
        >
          
        Next
      
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--corner-arrow"
        />
      </button>
      <script
        id="ecl-quiz__dot-template"
        type="text/template"
      >
        &lt;button class="ecl-quiz__dot"&gt;&lt;/button&gt;
      </script>
    </div>
    <div
      class="ecl-quiz__counter"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="ecl-quiz__live-region"
    />
  </section>
</jest>
`;

exports[`Quiz Reveal renders correctly 1`] = `
<jest>
  <section
    class="ecl-quiz ecl-quiz--reveal"
    data-ecl-auto-init="Quiz"
    id="quiz-reveal"
  >
    <div
      class="ecl-quiz__header"
    >
      <div
        class="ecl-quiz__title"
      >
        Ut enim ad minim veniam 
      </div>
      <div
        class="ecl-quiz__description"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
    Excepteur sint occaecat cupidatat non proident, sunt.
      </div>
    </div>
    <div
      class="ecl-quiz__viewport"
      data-ecl-quiz-slider=""
    >
      <ol
        class="ecl-quiz__list"
      >
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-1"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-1-question"
              >
                When you travel in the EU, what happens to your roaming charges?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-1-answer"
              >
                You usually pay the same at home, no extra roaming fees.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-2"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-2-question"
              >
                What document allows EU citizens to travel freely between most EU countries?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-2-answer"
              >
                A valid ID card or passport is usually enough.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-3"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-3-question"
              >
                What currency is used in many EU countries?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-3-answer"
              >
                The euro (€) is used in many EU member states.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-4"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-4-question"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-4-answer"
              >
                Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-5"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-5-question"
              >
                Nam lorem eros, auctor at feugiat id, efficitur non velit. Nam ac arcu vitae eros dapibus cursus vel eget lectus.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-5-answer"
              >
                Aenean est metus, malesuada sed suscipit id, tempor non sapien. Donec viverra, odio id venenatis sollicitudin
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
      </ol>
    </div>
    <div
      class="ecl-quiz__pager"
    >
      <button
        class="ecl-quiz__prev"
      >
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-270 ecl-icon--corner-arrow"
        />
        <span
          class="ecl-quiz__prev-label"
        >
          
        Previous
      
        </span>
      </button>
      <div
        class="ecl-quiz__dots"
      />
      <button
        class="ecl-quiz__next"
      >
        <span
          class="ecl-quiz__next-label"
        >
          
        Next
      
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--corner-arrow"
        />
      </button>
      <script
        id="ecl-quiz__dot-template"
        type="text/template"
      >
        &lt;button class="ecl-quiz__dot"&gt;&lt;/button&gt;
      </script>
    </div>
    <div
      class="ecl-quiz__counter"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="ecl-quiz__live-region"
    />
  </section>
</jest>
`;

exports[`Quiz Reveal renders correctly with extra attributes 1`] = `
<jest>
  <section
    class="ecl-quiz ecl-quiz--reveal"
    data-ecl-auto-init="Quiz"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="quiz-reveal"
  >
    <div
      class="ecl-quiz__header"
    >
      <div
        class="ecl-quiz__title"
      >
        Ut enim ad minim veniam 
      </div>
      <div
        class="ecl-quiz__description"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
    Excepteur sint occaecat cupidatat non proident, sunt.
      </div>
    </div>
    <div
      class="ecl-quiz__viewport"
      data-ecl-quiz-slider=""
    >
      <ol
        class="ecl-quiz__list"
      >
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-1"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-1-question"
              >
                When you travel in the EU, what happens to your roaming charges?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-1-answer"
              >
                You usually pay the same at home, no extra roaming fees.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-2"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-2-question"
              >
                What document allows EU citizens to travel freely between most EU countries?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-2-answer"
              >
                A valid ID card or passport is usually enough.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-3"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-3-question"
              >
                What currency is used in many EU countries?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-3-answer"
              >
                The euro (€) is used in many EU member states.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-4"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-4-question"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-4-answer"
              >
                Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-5"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-5-question"
              >
                Nam lorem eros, auctor at feugiat id, efficitur non velit. Nam ac arcu vitae eros dapibus cursus vel eget lectus.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-5-answer"
              >
                Aenean est metus, malesuada sed suscipit id, tempor non sapien. Donec viverra, odio id venenatis sollicitudin
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
      </ol>
    </div>
    <div
      class="ecl-quiz__pager"
    >
      <button
        class="ecl-quiz__prev"
      >
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-270 ecl-icon--corner-arrow"
          data-test="data-test-value"
          data-test-1="data-test-value-1"
        />
        <span
          class="ecl-quiz__prev-label"
        >
          
        Previous
      
        </span>
      </button>
      <div
        class="ecl-quiz__dots"
      />
      <button
        class="ecl-quiz__next"
      >
        <span
          class="ecl-quiz__next-label"
        >
          
        Next
      
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--corner-arrow"
          data-test="data-test-value"
          data-test-1="data-test-value-1"
        />
      </button>
      <script
        id="ecl-quiz__dot-template"
        type="text/template"
      >
        &lt;button class="ecl-quiz__dot"&gt;&lt;/button&gt;
      </script>
    </div>
    <div
      class="ecl-quiz__counter"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="ecl-quiz__live-region"
    />
  </section>
</jest>
`;

exports[`Quiz Reveal renders correctly with extra class names 1`] = `
<jest>
  <section
    class="ecl-quiz ecl-quiz--reveal custom-class custom-class--test"
    data-ecl-auto-init="Quiz"
    id="quiz-reveal"
  >
    <div
      class="ecl-quiz__header"
    >
      <div
        class="ecl-quiz__title"
      >
        Ut enim ad minim veniam 
      </div>
      <div
        class="ecl-quiz__description"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
    Excepteur sint occaecat cupidatat non proident, sunt.
      </div>
    </div>
    <div
      class="ecl-quiz__viewport"
      data-ecl-quiz-slider=""
    >
      <ol
        class="ecl-quiz__list"
      >
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-1"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-1-question"
              >
                When you travel in the EU, what happens to your roaming charges?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-1-answer"
              >
                You usually pay the same at home, no extra roaming fees.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-2"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-2-question"
              >
                What document allows EU citizens to travel freely between most EU countries?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-2-answer"
              >
                A valid ID card or passport is usually enough.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-3"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-3-question"
              >
                What currency is used in many EU countries?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-3-answer"
              >
                The euro (€) is used in many EU member states.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-4"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-4-question"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-4-answer"
              >
                Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-5"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-5-question"
              >
                Nam lorem eros, auctor at feugiat id, efficitur non velit. Nam ac arcu vitae eros dapibus cursus vel eget lectus.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-5-answer"
              >
                Aenean est metus, malesuada sed suscipit id, tempor non sapien. Donec viverra, odio id venenatis sollicitudin
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
      </ol>
    </div>
    <div
      class="ecl-quiz__pager"
    >
      <button
        class="ecl-quiz__prev"
      >
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-270 custom-class custom-class--test ecl-icon--corner-arrow"
        />
        <span
          class="ecl-quiz__prev-label"
        >
          
        Previous
      
        </span>
      </button>
      <div
        class="ecl-quiz__dots"
      />
      <button
        class="ecl-quiz__next"
      >
        <span
          class="ecl-quiz__next-label"
        >
          
        Next
      
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-90 custom-class custom-class--test ecl-icon--corner-arrow"
        />
      </button>
      <script
        id="ecl-quiz__dot-template"
        type="text/template"
      >
        &lt;button class="ecl-quiz__dot"&gt;&lt;/button&gt;
      </script>
    </div>
    <div
      class="ecl-quiz__counter"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="ecl-quiz__live-region"
    />
  </section>
</jest>
`;
